nickel-lang/tests/integration/fail/infinite_loops/x_eq_expr_involving_x.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::InfiniteRecursion'
{ x = y + z, y = z + x, z = 1 }.x